fix to spacing on mobile
fix to spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ h1 {
 	}
 
 	.intro {
-		margin: 60px 0 50px 0;
+		margin: 80px 0 60px 0;
 	}
 
 	h1 {
